--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.22.3",
     "react-router-hash-link": "^2.4.3",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
